<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myqr.scanner.QrScanner">

    <TextView
        android:id="@+id/ComponentListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/component_list_header"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TableLayout
        android:id="@+id/ComponentListTable"
        android:layout_width="380dp"
        android:layout_height="553dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ComponentListHeader"
        app:layout_constraintVertical_bias="0.009">

        <TableRow
            android:id="@+id/ComponentListTableHeaders"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="190dp"
                android:layout_height="32dp"
                android:padding="5dp"
                android:text="@string/component_list_table_h_1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="190dp"
                android:layout_height="32dp"
                android:padding="5dp"
                android:text="@string/component_list_table_h_2" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/AddComponentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addComponentBtnListener"
        android:text="@string/add_component_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ComponentListTable" />
</androidx.constraintlayout.widget.ConstraintLayout>